# ravitejahomefoods_backend

./: .dockerignore  .env  Dockerfile  SHIPPING_ENDPOINTS_DOCUMENTATION.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  readme_endpoints.md  requirements.txt  test_db.py
config/: aws_boto3.py  collection.py  db.py  mongo_indexes.py  rate_limiter.py  redis_caching.py
config/jwt_auth/: token_creation.py
models/: admin_registration.py  cart_model.py  categories_models.py  coupons_models.py  delivery_charge_model.py  issues_model.py  order_model.py  products_model.py  reviews_model.py  shippingcharges_model.py  uploads_models.py  userslogin_models.py
routers/: admin_registration.py  cart_router.py  categories_router.py  coupons_routers.py  dashboard_router.py  issues_router.py  orders_router.py  products_router.py  reviews_router.py  shippingcharges_router.py  uploads_router.py  userslogin_routers.py
schemas/: admin_registration.py  cart_schema.py  categories_schema.py  coupons_schema.py  delivery_charge_schema.py  issues_schema.py  order_schema.py  products_schema.py  reviews_schema.py  shippingcharges_schema.py  upload_schema.py  userslogin_schema.py
tests/: ENDPOINT_RESULTS.md  ENDPOINT_RESULTS_REAL.md  _fakes.py  conftest.py  test_admin_registration.py  test_cart.py  test_categories.py  test_coupons.py  test_dashboard.py  test_health.py  test_issues.py  test_orders.py  test_products.py  test_reviews.py  test_shipping.py  test_uploads.py  test_userslogin.py
tests/integration/: conftest.py  test_admin_registration_real.py  test_cart_real.py  (+10 more)
